[package]
name = "glang_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
unescape = "0.1.0"
log = "0.4"
pixels = "0.9.0"
device_query = "1.1.1"
beryllium = { version = "0.7", features = ["use-raw-window-handle"] }
fermium = { version = "20016.1.1", default-features = false }
zstring = "0.1.3"